2003-10-20  Not Zed  <NotZed@Ximian.com>

	* mail-component.c (emc_popup_new_folder): pass the right object
	to set_selected().  Fixes a new real bug.  Undid reformatting.

2003-10-17  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-component.c: General compile fixes.
	(emc_popup_new_folder): Fixed to not shadow a parameter. Fixes a
	real bug.

	* mail-component.h: Added some prototypes.

2003-10-13  Not Zed  <NotZed@Ximian.com>

	* em-popup.c (em_popup_create_menu_once): only hookup target free
	if we have a target set.

	* mail-component.c (load_accounts): removed debug i accidentally
	left in.
	(emc_tree_right_click): handle right-click context menu, using an
	EMPopup table.
	(emc_popup_*): setup empty popup handlers.

2003-10-13  Not Zed  <NotZed@Ximian.com>

	* em-folder-selection.c (em_select_folder): asynchornous folder
	selection call.
	(emfs_folder_selected): callback for folder selected.

	* em-folder-view.c (emfv_popup_move): implement.
	(emfv_popup_copy): "
	(emfv_popup_move_cb): async folder select callback to run it.

2003-10-10  Not Zed  <NotZed@Ximian.com>

	* mail-account-gui.c
	(mail_account_gui_folder_selector_button_new): use
	em_folder_selection_button.
	(mail_account_gui_new): "
	(folder_selected): "

	* em-folder-selection-button.c: Make this use camel uri's rather
	than camelfolders.
	(set_selection): removed, redundant.
	(impl_dispose): removed, not needed.

	* em-folder-selection-button.h: change the selected signal not to
	actually return the selection, which must get retrieved later.

	* mail-component.c (em_uri_from_camel): create an evo mail uri
	from a camel one.
	(em_uri_to_camel): the reverse.

	* mail-signature-editor.c (mail_signature_editor): up the version
	of the gtkhtml editor.

2003-10-09  Not Zed  <NotZed@Ximian.com>

	* em-folder-selection-button.c (set_selection): always set
	selected_folder, otherwise we don't unset it properly.

	* em-folder-selection.c (em_folder_selection_run_dialog): fix a
	small memleak.